--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dist": "gulp dist",
     "clean": "gulp clean",
     "test": "gulp test",
-    "start": "concurrently \"npm run watch-ts\" \"npm run watch-node\"",
-    "watch-ts": "tsc -w -p src/tsconfig.json",
-    "watch-node": "nodemon src/index.js",
-    "build-src": "gulp build:src",
-    "build-test": "gulp build:test",
+    "start": "concurrently \"npm run watch:ts\" \"npm run watch:js\"",
+    "watch:ts": "tsc -w -p src/tsconfig.json",
+    "watch:js": "nodemon src/index.js",
+    "bin": "gulp bin",
+    "build:src": "gulp build:src",
+    "build:test": "gulp build:test",
+    "push": "git add . && git commit -m 'auto' && git push",
     "init-git": "node init-git.js"
   },
   "author": "",
