--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bin": "gulp bin",
     "build:src": "gulp build:src",
     "build:test": "gulp build:test",
-    "push": "git add . && git commit -m 'auto' && git push",
+    "push": "gulp push",
     "init-git": "node init-git.js"
   },
   "author": "",
@@ -33,7 +33,8 @@
     "mocha": "^6.2.2",
     "nodemon": "^2.0.2",
     "shelljs": "^0.8.3",
-    "typescript": "~3.4.1"
+    "typescript": "~3.4.1",
+    "yargs": "^16.0.3"
   },
   "pkg": {
     "assets": []
