--- a/package.json
+++ b/package.json
@@ -5,16 +5,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "clean": "gulp clean",
-    "test": "gulp test",
     "start": "concurrently \"npm run watch:ts\" \"npm run watch:js\"",
     "watch:ts": "tsc -w -p src/tsconfig.json",
-    "watch:js": "nodemon src/index.js",
-    "bin": "gulp bin",
-    "build:src": "gulp build:src",
-    "build:test": "gulp build:test",
-    "push": "gulp push",
-    "init-git": "node init-git.js"
+    "watch:js": "nodemon src/index.js"    
   },
   "author": "",
   "license": "ISC",
